src/pages/Products/Products.module.css
.productsContainer {
  padding: 0 1rem;
}

.header {
  background: #ffffff;
}

.headerImageWrapper {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 5rem;
}

.headerImage {
  height: 3.75rem;
}

.main {
  padding: 2rem 0;
}

.buttonWrapper {
  margin-bottom: 1.5rem;
}

.messageContainer {
  margin-top: 0.625rem;
  display: flex;
  justify-content: center;
}

.statsContainer {
  margin-bottom: 1.5rem;
}

.reactModalContent {
  width: 46.875rem;
  max-width: 100%;
  height: auto;
  margin: 3rem;
  background: #ffffff;
  border-radius: 0;
  outline: none;
  padding: 1.5rem;
}

@media (max-width: 48em) {
  .reactModalContent {
    margin: 0;
    min-height: 100%;
    min-width: 100%;
  }
}

.reactModalOverlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 999;
  overflow: auto;
  display: flex;
  align-items: flex-start;
  justify-content: center;
}

.modalContentHelper {
  position: relative;
  height: 100%;
  padding: 4rem 0;
}

.modalClose {
  cursor: pointer;
  color: var(--black);
  font-size: 1.5rem;
  line-height: 0;
  position: absolute;
  top: 0;
  right: 0;
}

.heroImageContainer {
  display: flex;
  justify-content: space-evenly;
  overflow: hidden;
  height: 19rem;
}

.heroImage {
  max-height: 15rem;
  display: block;
}

.noPaddingTop {
  padding-top: 0;
}

.container {
  max-width: 46.875rem;
  margin: 0 auto;
}

